--------------------------------------------------------------------------------
drkns 2025-04-22 21:28:12+01:00 - build 6467

1. Fix replace in far:regex.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-04-22 02:04:56+01:00 - build 6466

1. far:regex: selecting matches in the list selects the corresponding part of the test string.

--------------------------------------------------------------------------------
drkns 2025-04-21 12:47:09+01:00 - build 6465

1. Exception handling improvements.

2. Regex improvements:
   - Replace stops on unknown numbered or named groups.
   - Minor far:regex UI improvements.
   - Minor RECTL_GETNAMEDGROUPS changes:
     - Returns all compiled groups, not only found ones.
     - Results are valid till the next compile, not search/match.

--------------------------------------------------------------------------------
drkns 2025-04-20 21:28:54+01:00 - build 6464

1. Fix inconsistency in regex replace.
   Replace not found named groups with empty strings, same as not found numbered groups.

--------------------------------------------------------------------------------
drkns 2025-04-20 02:08:46+01:00 - build 6463

1. Remove extra complexity from conversions between visual and real positions in edit controls.

2. Optimize adding colors to editor.

--------------------------------------------------------------------------------
drkns 2025-04-16 21:31:45+01:00 - build 6462

1. From Shmuel:
   Plugin API: RECTL_GETNAMEDGROUPS.
   Allows the caller to query named groups and their indices in the latest search/match.
   Param2 - an out pointer to RegExpNamedGroup*.
   Return value: the number of groups.
   Results are valid until the next search/match.

--------------------------------------------------------------------------------
drkns 2025-04-16 20:01:22+01:00 - build 6461

1. Refactoring.

--------------------------------------------------------------------------------