@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-04-24 17:44:08+01:00 - build 6468
+
+1. gh-940: Editor Find All does not work.
+
+--------------------------------------------------------------------------------
 drkns 2025-04-22 21:28:12+01:00 - build 6467
 
 1. Fix replace in far:regex.
